--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "technical test",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node index.js",
     "postinstall": "tsc",
     "dev": "tsnd src/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
