--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "radarfit",
   "version": "1.0.0",
   "description": "technical test",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "build": "tsc",
     "start": "node index.js",
-    "postinstall": "tsc",
     "dev": "tsnd src/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest -i --forceExit --verbose",
