--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "technical test",
   "main": "src/index.ts",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node build/index.js",
     "postinstall": "tsc",
