--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
-    "typescript": "4.4.3",
+    "typescript": "^4.6.3",
     "util": "0.12.4"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
