--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
     "chai-http": "4.3.0",
-    "dotenv": "16.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "15.0.0",
@@ -58,7 +58,8 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "mongoose": "^6.7.1",
-    "zod": "3.11.6"
+    "zod": "3.11.6",
+    "dotenv": "^16.0.0"
   },
   "author": "victor vidal",
   "license": "ISC"
