--- a/package.json
+++ b/package.json
@@ -47,19 +47,19 @@
     "sinon": "13.0.1",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
-    "ts-node": "10.4.0",
-    "ts-node-dev": "1.1.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.3",
     "util": "0.12.4"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.0.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "mongoose": "^6.7.1",
-    "zod": "3.11.6",
-    "dotenv": "^16.0.0"
+    "zod": "3.11.6"
   },
   "author": "victor vidal",
   "license": "ISC"
