--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "radarfit",
   "version": "1.0.0",
   "description": "technical test",
-  "main": "src/index.ts",
+  "main": "api/index.ts",
   "engines": {
     "node": "16.x"
   },
   "scripts": {
-    "start": "node build/index.js",
-    "postinstall": "tsc",
-    "dev": "tsnd src/index.ts",
+    "start": "vercel dev",
+    "deploy" : "vercel deploy --prod",
+    "dev": "tsnd api/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest -i --forceExit --verbose",
     "test:dev": "mocha -r ts-node/register src/tests/unit/**/*.test.ts --exit -t 60000",
@@ -21,7 +21,7 @@
     "@types/chai": "4.3.0",
     "@types/chai-as-promised": "7.1.5",
     "@types/chai-http": "4.2.0",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/joi": "17.2.3",
     "@types/mocha": "9.1.0",
@@ -49,7 +49,7 @@
     "ts-jest": "27.1.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.8.4",
     "util": "0.12.4"
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "mongoose": "^6.7.1",
+    "vercel": "^28.4.14",
     "zod": "3.11.6"
   },
   "author": "victor vidal",
