--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
     "version": 2,
-    "builds": [{ "src": "build/index.js", "use": "@now/node-server" }]
-}
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
+  }
